<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TNT Doom</string>
    <string name="exit">Exit</string>
    <string name="quick_start">Start</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="trackball">Use Trackball</string>
    <string name="trackball_toggle_summary">Set if phone has trackball</string>
    <string name="trackball_dampen">Trackball Dampening</string>
    <string name="trackball_dampen_summary">Set Trackball Dampening</string>
    <string name="arrowkeys">Use Arrowkeys</string>
    <string name="arrowkeys_toggle_summary">Set if phone has Arrowkeys</string>
    <string name="accelerometer">Use Accelerometer</string>
    <string name="accelerometer_toggle_summary">Turn left and right by Accelerometer</string>
    <string name="accelerometer_sensitive">Tilt Sensitivity</string>
    <string name="accelerometer_sensitive_summary">the higher tilt sesitivity are, the faster the chracter move</string>

    <string name="touchscreen">Use Touchscreen Keyboard </string>
    <string name="touchscreen_toggle_summary">Set to use Touchscreen Keyboard</string>
    <string name="touchscreen_icon_size">Touchscreen icon size</string>
    <string name="touchscreen_icon_size_summary">choose touchscreen icon size</string>
    <string name="help_content">the four icon means:fire, map, change weapon and open door, open door icon also used for return. \nUse keyboard if you have, W,A,S,D for move,Q,E for strafe left and right J for fire, Space for open door</string>
	<string name="whats_new_ticker">Add new Feature:1.support drag screen to change orientation 2.Now you can use Key of volume up/down and camera to control direction, search key for fire 3. fix bug:guns keep switching randomly.</string>

</resources>
